<resources>
    <!-- Customize your app's name here. -->
    <string name="app_name">UnfinItaly</string>
    <string name="title_activity_maps">UnfinItaly</string>
    <string name="app_title">UnfinItaly</string>
    <!-- -->

    <string name="gps_disabled">GPS disattivato</string>
    <string name="gps_enabled">GPS attivato</string>
    <string name="conn_failed">Connessione fallita</string>
    <string name="conn_suspended">Connessione sospesa</string>

    <string name="menu_reset">Cancella i dati dell\'applicazione</string>
    <string name="menu_reset_confirm">Se autorizzi l\'operazione tutti i dati salvati nella memoria locale verranno cancellati (non cancellerai il tuo account o i commenti inseriti).\n
        Dovrai riaprire manualmente l\'applicazione.\nUtilizza la funzionalità solo se riscontri anomalie durante l\'utilizzo dell\'applicazione.\n\nConfermare?</string>

    <string name="menu_mapStyle_title">Stile Mappa</string>
    <string name="menu_mapStyle_summary">Scegli il tipo di mappa di Google Maps</string>
    <string name="menu_zoomThreshold_title">Soglia di Zoom</string>
    <string name="menu_zoomThreshold_summary">Soglia oltre la quale scompare il pulsante per impostare il marker</string>
    <string name="menu_checkBox_title">Aggiornamento Automatico</string>
    <string name="menu_checkBox_summary">Verifica la presenza di versioni più recenti.</string>

    <string name="menu_zoomThreshold_low">Basso</string>
    <string name="menu_zoomThreshold_mid">Medio</string>
    <string name="menu_zoomThreshold_high">Alto</string>
    <string name="menu_mapStyle_normal">Standard</string>
    <string name="menu_mapStyle_satellite">Satellite</string>
    <string name="menu_mapStyle_terrain">Terreno</string>
    <string name="menu_mapStyle_hybrid">Ibrido</string>

    <!--Crediti -->
    <string name="credits_year">2018</string>
    <string name="credits_project">UnfinItaly</string>
    <string name="credits_company">Università Ca\' Foscari Venezia</string>
    <string name="credits_authors">Enrico Vettori</string>
    <!-- -->

    <string name="action_info">Info</string>
    <string name="action_impostazioni">Impostazioni</string>

    <!--Generali -->
    <string name="msg_loading">Caricamento...</string>
    <string name="msg_ok">Ok</string>
    <string name="msg_back">Indietro</string>
    <string name="msg_error_gps">Errore durante la ricezione della posizione. Riprova tra poco.</string>
    <!-- -->

    <!--Loading Activity -->
    <string name="loading_snackbarcontinue">CONTINUA</string>
    <string name="loading_snackbarwait">Attendi, caricamento in corso..</string>
    <string name="loading_snackbarready">Caricamento completato!</string>
    <string name="loading_snackbarnotready">Caricamento non ancora finito. Attendi!</string>
    <!-- -->

    <!-- Maps Activity -->
    <string name="maps_onmapclick">Tieni premuto sulla mappa per aprire le impostazioni.</string>
    <string name="maps_onmaplongclick">Apertura impostazioni...</string>
    <string name="maps_onmapbackpress">Premi ancora per uscire</string>
    <string name="msg_button_car">Pulsante premuto</string>
    <string name="msg_permissions_not_granted">I permessi appena negati dall\'utente sono necessari per alcune funzionalità dell\'app. Il supporto delle funzionalità sarà ridotto.</string>
    <string name="marker_title">You are HERE</string>
    <!-- -->

    <!--Base Activity -->
    <string name="selezionelista">Selezionare almeno un elemento nella lista.</string>
    <!-- -->

    <!--Info Activity -->
    <string name="creditsdatadroid">Questa applicazione è stata sviluppata usando il toolkit Datadroid.\n\nVersione app: </string>
    <string name="creditsdatadroiderror">Questa applicazione è stata sviluppata usando il toolkit Datadroid.</string>
    <string name="email">Email\nunfinitaly.app@gmail.com</string>
    <string name="website">Sito web\nunfintaly.altervista.org</string>
    <!-- -->

    <!-- FragmentLoading -->
    <string name="loading_ok">Caricamento dati in corso...</string>
    <string name="loading_bad">Errore durante il caricamento dei dati. Controlla la connessione.</string>
    <!-- -->

    <!--FragmentInfo 1 -->
    <string name="fi1_description">Questa schermata verrà visualizzata solo al primo avvio.</string>
    <string name="fi1_bottom">Prima di iniziare, vogliamo spiegarti in breve il funzionamento di UnfinItaly.</string>
    <string name="f1_menu">Benvenuto su UnfinItaly</string>
    <!-- -->

    <!--FragmentInfo 2 -->
    <string name="fi2_menu">Accesso al menù</string>
    <string name="fi2_description">Effettua uno swipe dal lato sinistro verso il centro per accedere al menù! Dal menù puoi attivare i filtri e accedere alle informazioni.</string>
    <!-- -->

    <!--FragmentInfo 3 -->
    <string name="fi3_menu">Informazioni opera</string>
    <string name="fi3_description">Se vuoi vedere le informazioni di un\'opera incompiuta, prima devi selezionarla dalla mappa, e in seguito cliccare sulla finestra in sovraimpressione.</string>
    <!-- -->

    <!--FragmentInfo 4 -->
    <string name="fi4_menu">Commenta l\'opera</string>
    <string name="fi4_description">Puoi creare un nuovo account o accedere con il tuo account Google per scrivere commenti su ogni opera.</string>
    <!-- -->

    <!--FragmentInfo 5 -->
    <string name="fi5_menu">Aiuto? Suggerimenti?</string>
    <string name="fi5_description">Puoi contattarci dalla sezione informazioni!</string>
    <!-- -->

    <!-- Custom Cluster Manager -->
    <string name="clustertitle">Elementi presenti</string>
    <string name="clustercategoria">Categoria</string>
    <!-- -->

    <!-- Login Activity -->
    <string name="login_text">Accedi con il tuo account\nper commentare le opere.</string>
    <string name="login_button">Accedi</string>
    <string name="login_email">Email</string>
    <string name="login_psw">Password</string>
    <string name="login_new_account">Crea un account</string>
    <string name="login_skip">Salta il login</string>
    <string name="login_forgot_psw">Reset password</string>
    <string name="login_success">Accesso effettuato con successo.</string>
    <string name="login_failed">Errore durante il login</string>
    <string name="logout_success">Sei uscito con successo.</string>
    <string name="empty_fields">Inserire i campi richiesti</string>
    <string name="empty_email">Campo email vuoto</string>
    <string name="password_short">Password troppo corta</string>
    <string name="reset_password_ok">Invio email riuscito, controlla la casella per resettare la password</string>
    <string name="reset_password_error">Invio email non riuscito</string>
    <string name="email_bad_format">Indirizzo email non valido</string>
    <!-- -->

    <!-- Account Activity -->
    <string name="account_name">Il tuo profilo</string>
    <string name="account_email">La tua email</string>
    <string name="account_logout">Logout</string>
    <string name="account_reset">Cambia password</string>
    <string name="account_toolbar">Il tuo account</string>
    <string name="account_dati_personali">Trattamento dati personali</string>
    <!-- -->

    <!-- Side menu -->
    <string name="menu_account_nologin">UnfinItaly</string>
    <string name="menu_email_nologin">unfinitaly.app@gmail.com</string>
    <string name="menu_user">Il tuo profilo</string>
    <string name="menu_informazioni">Informazioni</string>
    <string name="menu_impostazioni">Impostazioni</string>
    <string name="menu_reset_filtri">Reset filtri</string>
    <string name="menu_regione">Filtro per regione</string>
    <string name="menu_categoria">Filtro per categoria</string>
    <string name="menu_percentuale">Colora perc. opera</string>
    <string name="menu_distribuzione">Filtro distribuzione</string>
    <string name="menu_percentuale_regione">Colora perc. regione</string>
    <string name="menu_mappa">Mappa</string>
    <!-- -->

    <!-- Nuovo account activity -->
    <string name="new_account_title">Crea il tuo account</string>
    <string name="new_account_name">Inserisci il nome e cognome</string>
    <string name="new_account_email">Inserisci la tua email</string>
    <string name="new_account_psw">Inserisci la password</string>
    <string name="new_acocunt_psw_repeat">Ripeti la password</string>
    <string name="new_account_checkbox">Accetto le condizioni di utilizzo\nper il trattamento dei dati immessi</string>
    <string name="new_account_conferma">Registrati</string>
    <string name="new_account_cancel">Annulla</string>
    <!-- -->

    <!--Alert dialog search -->
    <string name="search_dialog_title">Ricerca una località</string>
    <!-- -->
</resources>
